add lesson, invoice

--- a/src/sass/base.scss
+++ b/src/sass/base.scss
@@ -68,3 +68,7 @@ th {
 select.form-control:not([size]):not([multiple]) {
     height: auto;
 }
+
+.pagination-lg .page-link {
+    font-size: 16px;
+}
