--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -12,6 +12,20 @@
         <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css' />
         <link rel='stylesheet' href='/css/base.css' />
         <link rel='stylesheet' href='/css/style.css' />
+        <script src="https://cdn.ckeditor.com/ckeditor5/41.3.0/classic/ckeditor.js"></script>
+    <style>
+        .ck-editor__editable[role="textbox"] {
+            /* Editing area */
+            min-height: 200px;
+            padding: 0 30px;
+        }
+
+        .ck-content .image {
+            /* Block images */
+            max-width: 80%;
+            margin: 20px auto;
+        }
+    </style>
     </head>
     <body>
         <div class='app'>
@@ -44,6 +58,13 @@
             integrity='sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl'
             crossorigin='anonymous'
         ></script>
+        <script>
+            ClassicEditor
+                .create( document.querySelector( '#content' ) )
+                .catch( error => {
+                    console.error( error );
+            } );
+        </script>
        
     </body>
 </html>
