--- a/src/views/pages/user/edit.hbs
+++ b/src/views/pages/user/edit.hbs
@@ -10,7 +10,7 @@
         </div>
     </div>
     <div class='row'>
-        <div class='col-6 grid-margin stretch-card'>
+        <div class='col-8 grid-margin stretch-card'>
             <div class='card'>
                 <div class='card-body'>
                     <h4 class='card-title'>Edit user</h4>
@@ -20,7 +20,7 @@
                         </div>
                     {{/if}}
 
-                    <form action='/users/{{user.id}}?_method=patch' class='forms-sample' method='POST'>
+                    <form action='{{route}}/{{user.id}}?_method=patch' class='forms-sample' method='POST'>
                         <div class='form-group'>
                             <label for='exampleInputUsername1'>Username</label>
                             <input
@@ -71,7 +71,6 @@
                         </div>
 
                         <button type='submit' class='btn btn-primary mr-2'>Submit</button>
-                        <button class='btn btn-light'>Cancel</button>
                     </form>
                 </div>
             </div>
