--- a/src/views/pages/user/show.hbs
+++ b/src/views/pages/user/show.hbs
@@ -10,7 +10,6 @@
         </div>
     </div>
     <div class='row'>
-
         <div class='col-md-12 grid-margin stretch-card'>
             <div class='card'>
                 <div class='card-body'>
@@ -58,7 +57,7 @@
                                                 <td>{{formatDate this.createdAt}}</td>
                                                 <td class='details-control'>
                                                     <a
-                                                        href='/users/{{this.id}}/edit'
+                                                        href='{{../route}}/{{this.id}}/edit'
                                                         id='btn-edit'
                                                         class='btn btn-primary'
                                                     >Edit</a>
@@ -79,11 +78,35 @@
                             </div>
                         </div>
                     </div>
+                    <div class='row'>
+                        <div class='col-12'>
+                            <nav class="mt-5">
+                                <ul class='pagination pagination-lg justify-content-end'>
+                                    <li class='page-item disabled'>
+                                        <a class='page-link' href='#' aria-label='Previous'>
+                                            <span aria-hidden='true'>&laquo;</span>
+                                            <span class='sr-only'>Previous</span>
+                                        </a>
+                                    </li>
+                                    <li class='page-item active'><a class='page-link' href='#'>1</a></li>
+                                    <li class='page-item'><a class='page-link' href='#'>2</a></li>
+                                    <li class='page-item'><a class='page-link' href='#'>3</a></li>
+                                    <li class='page-item'>
+                                        <a class='page-link' href='#' aria-label='Next'>
+                                            <span aria-hidden='true'>&raquo;</span>
+                                            <span class='sr-only'>Next</span>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </nav>
+                        </div>
+                    </div>
 
                 </div>
             </div>
         </div>
     </div>
+
 </div>
 
 {{! Modal create }}
@@ -95,7 +118,7 @@
     aria-labelledby='exampleModalLabel'
     aria-hidden='true'
 >
-    <div class='modal-dialog' role='document'>
+    <div class='modal-dialog modal-lg' role='document'>
         <div class='modal-content'>
             <div class='modal-header'>
                 <h5 class='modal-title' id='exampleModalLabel'>Create new user</h5>
@@ -191,5 +214,6 @@
 
 <script src='/js/main.js'></script>
 <script>
-    const message = '{{{message}}}'; if(message) alert(message);
+    document.addEventListener('DOMContentLoaded', function(){ const message = '{{{message}}}'; if(message)
+    alert(message); });
 </script>
