--- a/src/views/partials/header.hbs
+++ b/src/views/partials/header.hbs
@@ -1,5 +1,5 @@
 <nav class='navbar navbar-expand-lg navbar-light'>
-    <a class='navbar-brand logo' href='#'>
+    <a class='navbar-brand logo' href='/'>
         <i class='fa-solid fa-code'></i>
         <span>CodeLearn</span>
     </a>
