--- a/src/views/partials/sidebar.hbs
+++ b/src/views/partials/sidebar.hbs
@@ -67,9 +67,63 @@
                 </a>
             </li>
             <li class='nav-item'>
+                <a class='nav-link' href='/lessons'>
+                    <svg
+                        class='icon'
+                        fill='currentColor'
+                        style='enable-background:new 0 0 50 50;'
+                        version='1.1'
+                        viewBox='0 0 50 50'
+                        xml:space='preserve'
+                        xmlns='http://www.w3.org/2000/svg'
+                        xmlns:xlink='http://www.w3.org/1999/xlink'
+                    ><g id='Layer_1'><path
+                                d='M26,3V1h-2v2H3H1v2h2v26H1v2h2h17.471L14,47.791V49h2v-0.791L22.654,33H24v16h2V33h1.346L34,48.209V49h2v-1.209L29.529,33   H47h2v-2h-2V5h2V3h-2H26z M45,31H5V5h40V31z'
+                            /><path
+                                d='M16,28c4.411,0,8-3.589,8-8v-1h-7v-7h-1c-4.411,0-8,3.589-8,8S11.589,28,16,28z M15,14.083V21h6.917   c-0.478,2.834-2.949,5-5.917,5c-3.309,0-6-2.691-6-6C10,17.032,12.166,14.561,15,14.083z'
+                            /><path
+                                d='M28,16c0-4.411-3.589-8-8-8h-1v9h9V16z M21,15v-4.917c2.509,0.422,4.494,2.408,4.917,4.917H21z'
+                            /><rect height='2' width='10' x='31' y='10' /><rect
+                                height='2'
+                                width='10'
+                                x='31'
+                                y='15'
+                            /><rect height='2' width='10' x='31' y='20' /></g><g /></svg>
+                    <span class='menu-title'>Lesson</span>
+                </a>
+            </li>
+            <li class='nav-item'>
                 <a class='nav-link' href='/registers'>
-                    <span class='icon fa-regular fa-rectangle-list'></span>
+                    <svg
+                        class='feather feather-edit-3 icon'
+                        fill='none'
+                        height='24'
+                        stroke='currentColor'
+                        stroke-linecap='round'
+                        stroke-linejoin='round'
+                        stroke-width='2'
+                        viewBox='0 0 24 24'
+                        width='24'
+                        xmlns='http://www.w3.org/2000/svg'
+                    ><path d='M12 20h9' /><path d='M16.5 3.5a2.121 2.121 0 0 1 3 3L7 19l-4 1 1-4L16.5 3.5z' /></svg>
                     <span class='menu-title'>Register</span>
+                </a>
+            </li>
+            <li class='nav-item'>
+                <a class='nav-link' href='/invoices'>
+                    <svg
+                        class='icon'
+                        fill='currentColor'
+                        data-name='Layer 1'
+                        id='Layer_1'
+                        viewBox='0 0 24 24'
+                        xmlns='http://www.w3.org/2000/svg'
+                    >
+                        <path
+                            d='M8,13h8V11H8ZM8,9h8V7H8Zm5,8h3V15H13ZM19.11,2a3.06,3.06,0,0,0-1.75.57,1,1,0,0,1-1.25,0,3,3,0,0,0-3.5,0A1.14,1.14,0,0,1,12,2.8a1.06,1.06,0,0,1-.6-.22A3,3,0,0,0,9.64,2a3,3,0,0,0-1.75.57,1,1,0,0,1-1.25,0A3.06,3.06,0,0,0,4.89,2H4V22h.89a3.06,3.06,0,0,0,1.75-.57,1,1,0,0,1,1.25,0,3,3,0,0,0,3.5,0A1.14,1.14,0,0,1,12,21.2a1.06,1.06,0,0,1,.6.22,3,3,0,0,0,1.74.58,3,3,0,0,0,1.75-.57,1,1,0,0,1,1.25,0,3.06,3.06,0,0,0,1.75.57H20V2ZM18,19.5a3,3,0,0,0-3,.28,1.09,1.09,0,0,1-.62.22,1,1,0,0,1-.6-.22A3,3,0,0,0,12,19.2a3.11,3.11,0,0,0-1.76.58,1,1,0,0,1-1.24,0,3,3,0,0,0-3-.28V4.5a3,3,0,0,0,1.26.3A3.11,3.11,0,0,0,9,4.22,1.09,1.09,0,0,1,9.64,4a1,1,0,0,1,.6.22A3,3,0,0,0,12,4.8a3.11,3.11,0,0,0,1.76-.58,1,1,0,0,1,1.24,0,3.11,3.11,0,0,0,1.76.58A3,3,0,0,0,18,4.5Z'
+                        />
+                    </svg>
+                    <span class='menu-title'>Invoice</span>
                 </a>
             </li>
             {{! <li class='nav-item'>
