update api home

--- a/src/views/pages/course/edit.hbs
+++ b/src/views/pages/course/edit.hbs
@@ -19,7 +19,7 @@
                             {{error}}
                         </div>
                     {{/if}}
-                    <form action='{{route}}/{{course.id}}?_method=patch' class='forms-sample' method='POST'>
+                    <form action='{{route}}/{{course.id}}?_method=PUT' class='forms-sample' method='POST'>
                         <div class='form-group'>
                             <label for='title'>Title:</label>
                             <input
