--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -4,28 +4,18 @@
         <meta name='viewport' content='width=device-width, initial-scale=1.0' />
         <title>CodeLearn Admin</title>
         <link
+            href='https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css'
             rel='stylesheet'
-            href='https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css'
-            integrity='sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm'
+            integrity='sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC'
             crossorigin='anonymous'
         />
         <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css' />
         <link rel='stylesheet' href='/css/base.css' />
         <link rel='stylesheet' href='/css/style.css' />
-        <script src="https://cdn.ckeditor.com/ckeditor5/41.3.0/classic/ckeditor.js"></script>
-    <style>
-        .ck-editor__editable[role="textbox"] {
-            /* Editing area */
-            min-height: 200px;
-            padding: 0 30px;
-        }
-
-        .ck-content .image {
-            /* Block images */
-            max-width: 80%;
-            margin: 20px auto;
-        }
-    </style>
+        <style>
+            .ck-editor__editable[role="textbox"] { /* Editing area */ min-height: 200px; padding: 0 30px; } .ck-content
+            .image { /* Block images */ max-width: 80%; margin: 20px auto; }
+        </style>
     </head>
     <body>
         <div class='app'>
@@ -34,37 +24,24 @@
             </header>
             <div class='container'>
                 {{>sidebar}}
-                <div class="content"> 
+                <div class='content'>
                     {{{body}}}
                 </div>
             </div>
         </div>
-        <script src="/js/main.js"></script>
-   
-        {{!-- <script src="https://cdn.ckeditor.com/4.22.1/standard/ckeditor.js"></script> --}}
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.8/handlebars.min.js"></script>
-        <script
-            src='https://code.jquery.com/jquery-3.2.1.slim.min.js'
-            integrity='sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN'
-            crossorigin='anonymous'
-        ></script>
-        <script
-            src='https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js'
-            integrity='sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q'
-            crossorigin='anonymous'
-        ></script>
-        <script
-            src='https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js'
-            integrity='sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl'
-            crossorigin='anonymous'
-        ></script>
+        <script type='module' src='/js/main.js'></script>
+        <script src="https://cdn.ckeditor.com/ckeditor5/41.3.1/classic/ckeditor.js"></script>
         <script>
             ClassicEditor
                 .create( document.querySelector( '#content' ) )
                 .catch( error => {
                     console.error( error );
-            } );
+                } );
         </script>
-       
+        <script
+            src='https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js'
+            integrity='sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM'
+            crossorigin='anonymous'
+        ></script>
     </body>
 </html>
