--- a/src/views/pages/category/show.hbs
+++ b/src/views/pages/category/show.hbs
@@ -20,12 +20,17 @@
                         <button
                             class='btn btn-primary btn-create'
                             type='button'
-                            data-toggle='modal'
-                            data-target='#exampleModal'
+                            data-bs-toggle='modal'
+                            data-bs-target='#exampleModal'
                         >+</button>
                     </div>
                     <div class='row'>
                         <div class='col-12'>
+                            {{#if message}}
+                                <div class='alert alert-success' role='alert'>
+                                    {{message}}
+                                </div>
+                            {{/if}}
                             {{#if error}}
                                 <div class='alert alert-danger' role='alert'>
                                     {{error}}
@@ -64,8 +69,8 @@
                                                         id='btn-confirm-delete'
                                                         data-id='{{this.id}}'
                                                         class='btn btn-danger'
-                                                        data-toggle='modal'
-                                                        data-target='#delete-modal'
+                                                        data-bs-toggle='modal'
+                                                        data-bs-target='#delete-modal'
                                                     >Delete</button>
                                                 </td>
                                             </tr>
@@ -97,7 +102,7 @@
         <div class='modal-content'>
             <div class='modal-header'>
                 <h5 class='modal-title' id='exampleModalLabel'>Create new category</h5>
-                <button type='button' class='close' data-dismiss='modal' aria-label='Close'>
+                <button type='button' class='close' data-bs-dismiss='modal' aria-label='Close'>
                     <span aria-hidden='true'>&times;</span>
                 </button>
             </div>
@@ -136,7 +141,7 @@
                 </form>
             </div>
             <div class='modal-footer'>
-                <button type='button' class='btn btn-secondary' data-dismiss='modal'>Close</button>
+                <button type='button' class='btn btn-secondary' data-bs-dismiss='modal'>Close</button>
                 <button id='btn-create' type='button' class='btn btn-primary'>Save changes</button>
             </div>
         </div>
@@ -156,7 +161,7 @@
         <div class='modal-content'>
             <div class='modal-header'>
                 <h5 class='modal-title' id='exampleModalLabel'>Delete categories</h5>
-                <button type='button' class='close' data-dismiss='modal' aria-label='Close'>
+                <button type='button' class='close' data-bs-dismiss='modal' aria-label='Close'>
                     <span aria-hidden='true'>&times;</span>
                 </button>
             </div>
@@ -165,7 +170,7 @@
             </div>
             <div class='modal-footer'>
                 <button id='btn-delete' type='button' class='btn btn-danger'>Ok</button>
-                <button type='button' class='btn btn-secondary' data-dismiss='modal'>Cancel</button>
+                <button type='button' class='btn btn-secondary' data-bs-dismiss='modal'>Cancel</button>
             </div>
         </div>
     </div>
@@ -174,7 +179,3 @@
 <form name='form-delete' action='{{route}}' method='POST'></form>
 
 <script src='/js/main.js'></script>
-<script>
-    document.addEventListener('DOMContentLoaded', function(){ const message = '{{{message}}}'; if(message)
-    alert(message); });
-</script>
