--- a/src/views/pages/course/show.hbs
+++ b/src/views/pages/course/show.hbs
@@ -19,17 +19,23 @@
                         <button
                             class='btn btn-primary btn-create'
                             type='button'
-                            data-toggle='modal'
-                            data-target='#exampleModal'
+                            data-bs-toggle='modal'
+                            data-bs-target='#exampleModal'
                         >+</button>
                     </div>
                     <div class='row'>
                         <div class='col-12'>
+                            {{#if message}}
+                                <div class='alert alert-success' role='alert'>
+                                    {{message}}
+                                </div>
+                            {{/if}}
                             {{#if error}}
                                 <div class='alert alert-danger' role='alert'>
                                     {{error}}
                                 </div>
                             {{/if}}
+
                             <div class='table-responsive'>
                                 <table class='display expandable-table' style='width: 100%'>
                                     <thead>
@@ -67,8 +73,8 @@
                                                         id='btn-confirm-delete'
                                                         data-id='{{this.id}}'
                                                         class='btn btn-danger'
-                                                        data-toggle='modal'
-                                                        data-target='#delete-modal'
+                                                        data-bs-toggle='modal'
+                                                        data-bs-target='#delete-modal'
                                                     >Delete</button>
                                                     <a href='#' class='btn btn-info text-light'>Detail</a>
                                                 </td>
@@ -100,7 +106,7 @@
         <div class='modal-content'>
             <div class='modal-header'>
                 <h5 class='modal-title' id='exampleModalLabel'>Create new course</h5>
-                <button type='button' class='close' data-dismiss='modal' aria-label='Close'>
+                <button type='button' class='close' data-bs-dismiss='modal' aria-label='Close'>
                     <span aria-hidden='true'>&times;</span>
                 </button>
             </div>
@@ -159,7 +165,7 @@
                 </form>
             </div>
             <div class='modal-footer'>
-                <button type='button' class='btn btn-secondary' data-dismiss='modal'>Close</button>
+                <button type='button' class='btn btn-secondary' data-bs-dismiss='modal'>Close</button>
                 <button id='btn-create' type='button' class='btn btn-primary'>Save changes</button>
             </div>
         </div>
@@ -179,7 +185,7 @@
         <div class='modal-content'>
             <div class='modal-header'>
                 <h5 class='modal-title' id='exampleModalLabel'>Delete courses</h5>
-                <button type='button' class='close' data-dismiss='modal' aria-label='Close'>
+                <button type='button' class='close' data-bs-dismiss='modal' aria-label='Close'>
                     <span aria-hidden='true'>&times;</span>
                 </button>
             </div>
@@ -188,7 +194,7 @@
             </div>
             <div class='modal-footer'>
                 <button id='btn-delete' type='button' class='btn btn-danger'>Ok</button>
-                <button type='button' class='btn btn-secondary' data-dismiss='modal'>Cancel</button>
+                <button type='button' class='btn btn-secondary' data-bs-dismiss='modal'>Cancel</button>
             </div>
         </div>
     </div>
@@ -196,8 +202,3 @@
 
 <form name='form-delete' action='{{route}}' method='POST'></form>
 
-<script src='/js/main.js'></script>
-<script>
-    document.addEventListener('DOMContentLoaded', function(){ const message = '{{{message}}}'; if(message)
-    alert(message); });
-</script>
