--- a/src/views/pages/lesson/edit.hbs
+++ b/src/views/pages/lesson/edit.hbs
@@ -18,7 +18,7 @@
                             {{error}}
                         </div>
                     {{/if}}
-                    <form action='{{route}}/{{lesson.id}}?_method=patch' class='forms-sample' method='POST'>
+                    <form action='{{route}}/{{lesson.id}}?_method=PUT' class='forms-sample' method='POST'>
                         <div class='form-group'>
                             <label for='title'>Title:</label>
                             <input
