--- a/src/views/pages/lesson/show.hbs
+++ b/src/views/pages/lesson/show.hbs
@@ -39,12 +39,17 @@
                         <button
                             class='btn btn-primary btn-create'
                             type='button'
-                            data-toggle='modal'
-                            data-target='#exampleModal'
+                            data-bs-toggle='modal'
+                            data-bs-target='#exampleModal'
                         >+</button>
                     </div>
                     <div class='row'>
                         <div class='col-12'>
+                            {{#if message}}
+                                <div class='alert alert-success' role='alert'>
+                                    {{message}}
+                                </div>
+                            {{/if}}
                             {{#if error}}
                                 <div class='alert alert-danger' role='alert'>
                                     {{error}}
@@ -66,7 +71,7 @@
                                         </tr>
                                     </thead>
                                     <tbody>
-                                        {{#each lessons.rows}}
+                                        {{#each lessons}}
                                             <tr>
                                                 <td>
                                                     <input value='{{this.id}}' type='checkbox' name='id' id='id' />
@@ -95,8 +100,8 @@
                                                         id='btn-confirm-delete'
                                                         data-id='{{this.id}}'
                                                         class='btn btn-danger'
-                                                        data-toggle='modal'
-                                                        data-target='#delete-modal'
+                                                        data-bs-toggle='modal'
+                                                        data-bs-target='#delete-modal'
                                                     >Delete</button>
                                                 </td>
                                             </tr>
@@ -108,12 +113,16 @@
                             </div>
                         </div>
                     </div>
-                     <div class='row'>
+                    <div class='row'>
                         <div class='col-12'>
-                            <nav class="mt-5">
+                            <nav class='mt-5'>
                                 <ul class='pagination pagination-lg justify-content-end'>
-                                    <li class='page-item {{op lessons.page '==' 1 'disabled'}}'>
-                                        <a class='page-link' href='{{route}}?c={{course.id}}&page={{op lessons.page '-' 1}}' aria-label='Previous'>
+                                    <li class='page-item {{op lessons.page "==" 1 "disabled"}}'>
+                                        <a
+                                            class='page-link'
+                                            href='{{route}}?c={{course.id}}&page={{op lessons.page "-" 1}}'
+                                            aria-label='Previous'
+                                        >
                                             <span aria-hidden='true'>&laquo;</span>
                                             <span class='sr-only'>Previous</span>
                                         </a>
@@ -129,9 +138,12 @@
                                         </li>
                                         {{/ifEquals}}
                                     {{/times}}
-                                    <li class='page-item 
-                                    {{op lessons.page '==' pageNumber 'disabled'}}'>
-                                        <a class='page-link' href='{{route}}?c={{course.id}}&page={{op lessons.page '+' 1}}' aria-label='Next'>
+                                    <li class='page-item {{op lessons.page "==" pageNumber "disabled"}}'>
+                                        <a
+                                            class='page-link'
+                                            href='{{route}}?c={{course.id}}&page={{op lessons.page "+" 1}}'
+                                            aria-label='Next'
+                                        >
                                             <span aria-hidden='true'>&raquo;</span>
                                             <span class='sr-only'>Next</span>
                                         </a>
@@ -148,28 +160,26 @@
 </div>
 
 {{! Modal create }}
-<div
-    class='modal fade'
-    id='exampleModal'
-    tabindex='-1'
-    role='dialog'
-    aria-labelledby='exampleModalLabel'
-    aria-hidden='true'
->
-    <div class='modal-dialog modal-lg' role='document'>
+<div class='modal fade' id='exampleModal' tabindex='-1' aria-labelledby='exampleModalLabel' aria-hidden='true'>
+    <div class='modal-dialog modal-lg'>
         <div class='modal-content'>
             <div class='modal-header'>
-                <h5 class='modal-title' id='exampleModalLabel'>Create new lesson</h5>
-                <button type='button' class='close' data-dismiss='modal' aria-label='Close'>
-                    <span aria-hidden='true'>&times;</span>
-                </button>
+                <h5 class='modal-title' id='exampleModalLabel'>Modal title</h5>
+                <button type='button' class='btn-close' data-bs-dismiss='modal' aria-label='Close'></button>
             </div>
             <div class='modal-body'>
-                <form name='form' action='{{route}}' method="POST">
+                <form name='form' action='{{route}}' method='POST'>
 
                     <div class='form-group'>
                         <label for='title'>Title:</label>
-                        <input type='text' name='title' class='form-control' id='title' placeholder='Enter title' required />
+                        <input
+                            type='text'
+                            name='title'
+                            class='form-control'
+                            id='title'
+                            placeholder='Enter title'
+                            required
+                        />
                     </div>
                     <div class='form-group'>
                         <label for='description'>Description:</label>
@@ -182,7 +192,7 @@
                             required
                         />
                     </div>
-                    
+
                     <div class='form-group'>
                         <label for='duration'>Duration:</label>
                         <input
@@ -196,11 +206,25 @@
                     </div>
                     <div class='form-group'>
                         <label for='image'>Image:</label>
-                        <input type='text' name='image' class='form-control' id='image' placeholder='Enter image' required/>
+                        <input
+                            type='text'
+                            name='image'
+                            class='form-control'
+                            id='image'
+                            placeholder='Enter image'
+                            required
+                        />
                     </div>
                     <div class='form-group'>
                         <label for='video'>Video:</label>
-                        <input type='text' name='video' class='form-control' id='video' placeholder='Enter video' required/>
+                        <input
+                            type='text'
+                            name='video'
+                            class='form-control'
+                            id='video'
+                            placeholder='Enter video'
+                            required
+                        />
                     </div>
                     <div class='form-group'>
                         <label for='isPublished'>Publish:</label>
@@ -217,7 +241,12 @@
                     </div>
                     <div class='form-group'>
                         <label for='courseId'>Course:</label>
-                        <select name='courseId' class='form-control custom-select custom-select-sm' id='courseId' required>
+                        <select
+                            name='courseId'
+                            class='form-control custom-select custom-select-sm'
+                            id='courseId'
+                            required
+                        >
                             <option selected disabled>-- select course --</option>
                             {{#each courses}}
                                 {{#ifEquals this.id ../course.id}}
@@ -230,7 +259,7 @@
                                     </option>
                                 {{/ifEquals}}
                             {{/each}}
-                           
+
                         </select>
                     </div>
 
@@ -248,7 +277,7 @@
                 </form>
             </div>
             <div class='modal-footer'>
-                <button type='button' class='btn btn-secondary' data-dismiss='modal'>Close</button>
+                <button type='button' class='btn btn-secondary' data-bs-dismiss='modal'>Close</button>
                 <button id='btn-create' type='button' class='btn btn-primary'>Save changes</button>
             </div>
         </div>
@@ -256,44 +285,22 @@
 </div>
 
 {{! Modal delete }}
-<div
-    class='modal fade'
-    id='delete-modal'
-    tabindex='-1'
-    role='dialog'
-    aria-labelledby='exampleModalLabel'
-    aria-hidden='true'
->
-    <div class='modal-dialog' role='document'>
-        <div class='modal-content'>
-            <div class='modal-header'>
-                <h5 class='modal-title' id='exampleModalLabel'>Delete lessons</h5>
-                <button type='button' class='close' data-dismiss='modal' aria-label='Close'>
-                    <span aria-hidden='true'>&times;</span>
-                </button>
-            </div>
-            <div class='modal-body'>
-                Bạn có chắc chắn muốn xóa?
-            </div>
-            <div class='modal-footer'>
-                <button id='btn-delete' type='button' class='btn btn-danger'>Ok</button>
-                <button type='button' class='btn btn-secondary' data-dismiss='modal'>Cancel</button>
-            </div>
-        </div>
+<div class="modal fade" id='delete-modal' tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Delete lessons</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        Bạn có chắc chắn muốn xóa?
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button  id='btn-delete'  type="button" class="btn btn-danger">OK</button>
+      </div>
     </div>
+  </div>
 </div>
 
 <form name='form-delete' action='{{route}}' method='POST'></form>
-
-<script src='/js/main.js'></script>
-<script>
-    document.addEventListener('DOMContentLoaded', function(){
-        const message = '{{{message}}}'; 
-        if(message) alert(message); 
-        const selectCourse = document.getElementById('selectCourse'); 
-        selectCourse.onchange = function (e) { 
-            const val = e.target.value;
-            window.location.href = "/lessons?c=" + val
-        }
-    })
-</script>
