--- a/src/views/pages/register/edit.hbs
+++ b/src/views/pages/register/edit.hbs
@@ -20,7 +20,7 @@
                         </div>
                     {{/if}}
 
-                    <form action='{{route}}/{{register.id}}?_method=patch' class='forms-sample' method='POST'>
+                    <form action='{{route}}/{{register.id}}?_method=PUT' class='forms-sample' method='POST'>
                         <div class='form-group'>
                             <label for='courseId'>Course:</label>
                             <select name='courseId' class='form-control' id='courseId'>
