--- a/src/views/pages/user/edit.hbs
+++ b/src/views/pages/user/edit.hbs
@@ -20,7 +20,7 @@
                         </div>
                     {{/if}}
 
-                    <form action='{{route}}/{{user.id}}?_method=patch' class='forms-sample' method='POST'>
+                    <form action='{{route}}/{{user.id}}?_method=PUT' class='forms-sample' method='POST'>
                         <div class='form-group'>
                             <label for='exampleInputUsername1'>Username</label>
                             <input
