--- a/src/views/partials/header.hbs
+++ b/src/views/partials/header.hbs
@@ -75,11 +75,7 @@
                 id='profileDropdown'
                 aria-expanded='true'
             >
-                <img
-                    src='https://files.fullstack.edu.vn/f8-prod/user_avatars/330533/656b17e84ff15.jpg'
-                    class='avatar'
-                    alt='profile'
-                />
+                <img src='' class='avatar' alt='profile' />
             </a>
             <div class='dropdown-menu dropdown-menu-right navbar-dropdown' aria-labelledby='profileDropdown'>
                 <a class='dropdown-item'>
