--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -3,15 +3,11 @@
         <meta charset='UTF-8' />
         <meta name='viewport' content='width=device-width, initial-scale=1.0' />
         <title>CodeLearn Admin</title>
-        <link
-            href='https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css'
-            rel='stylesheet'
-            integrity='sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC'
-            crossorigin='anonymous'
-        />
-        <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css' />
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
         <link rel='stylesheet' href='/css/base.css' />
         <link rel='stylesheet' href='/css/style.css' />
+   
         <style>
             .ck-editor__editable[role="textbox"] { /* Editing area */ min-height: 200px; padding: 0 30px; } .ck-content
             .image { /* Block images */ max-width: 80%; margin: 20px auto; }
@@ -30,6 +26,7 @@
             </div>
         </div>
         <script type='module' src='/js/main.js'></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
         <script src="https://cdn.ckeditor.com/ckeditor5/41.3.1/classic/ckeditor.js"></script>
         <script>
             ClassicEditor
@@ -38,10 +35,6 @@
                     console.error( error );
                 } );
         </script>
-        <script
-            src='https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js'
-            integrity='sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM'
-            crossorigin='anonymous'
-        ></script>
+    
     </body>
 </html>
